# CGVStudio

./: CMakeLists.txt
cgprakt3/src/: Application.cpp  LineBoxModel.cpp  color.cpp  color.h  rgbimage.cpp  rgbimage.h  vector.cpp
